# docs

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
actions/actions/: index.html
cryptos/trading/: index.html
docs/: index.md
search/: search_index.json
