[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Sophisticated Traders docs"
authors = ["val <valquel@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
